test/gpu/native/errors/gpuTraceStd.devel.nopoi.good
std/MyMod.chpl:20: In function 'badLoop':
std/MyMod.chpl:22: error: Loop is marked with @assertOnGpu but is not eligible for execution on a GPU
std/MyMod.chpl:6: note: function is marked as not eligible for GPU execution
std/MyMod.chpl:9: note:   reached via call to 'doSomethingElse' here
std/MyMod.chpl:26: note:   reached via call to 'doSomething' in loop body here
  gpuTraceStd.chpl:11: called as badLoop(type t = myRecord)
